--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -20,22 +20,23 @@
 }
 
 .button-like {
-    color: rgb(109, 104, 104);
     background-color: transparent;
     border: none;
     font-size: 24px;
     cursor: pointer;
+
+    & i {
+        position: absolute;
+    }
   }
   
 .animheartsolid {
-    position: absolute;
     opacity: 0;
-    transition: all 800ms ease;
+    transition: all 500ms ease-in-out;
   
     &:hover {
         opacity: 1;
         background-clip: text;
-        font-size: 26px;
         -webkit-background-clip: text;
         /* necessaire pour le navigateur chrome */
         color: transparent;
