--- a/sass/components/_loading.scss
+++ b/sass/components/_loading.scss
@@ -1,3 +1,70 @@
+.loader {
+    position: fixed;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    width: 100%;
+    height: 100%;
+    background-color: $white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.loader-quart {
+    position: relative;
+    width: 60px;
+    height: 60px;
+    margin-bottom: 150px;
+    margin-right: 40px;
+    border-radius: 50px;
+    border: 6px solid #9356dc;
+    opacity: 0.8;
+  
+  &:after {
+    position: absolute;
+    top: -6px;
+    left: -6px;
+    right: -6px;
+    bottom: -6px;
+    content: "";
+    border: 6px solid transparent;
+    border-radius: 50px;
+    border-top-color: #99e2d0;
+    animation: spin 1s linear infinite;
+  }
+}
+  
+.letter {
+    color: $color-secondary;
+    font-size: 80px;
+    letter-spacing: 15px;
+    margin-bottom: 150px;
+    animation: flash 1.2s linear infinite;
+
+    &:nth-child(1) {
+        animation-delay: 0.1s;
+    }
+    &:nth-child(2) {
+        animation-delay: 0.2s;
+    }
+    &:nth-child(3) {
+        animation-delay: 0.3s;
+    }
+    &:nth-child(4) {
+        animation-delay: 0.4s;
+    }
+    &:nth-child(5) {
+        animation-delay: 0.5s;
+    }
+    &:nth-child(6) {
+        animation-delay: 0.6s;
+    }
+    &:nth-child(7) {
+        animation-delay: 0.7s;
+    }
+}
 
 
-// a faire pour l'annimation sur les pages menu
+
