--- a/styles/style.scss
+++ b/styles/style.scss
@@ -9,7 +9,7 @@
 @import "layout/header";
 @import "layout/footer";
 @import "pages/index";
-@import "pages/page-menu";
+@import "../sass/pages/page-menu";
 
 **************************************
 
